<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".model.bottomnav.InputFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/layout_card_chooser"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp">

        <TextView
            android:id="@+id/tv_browse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_file"
            android:textSize="16sp"
            android:layout_margin="16dp"
            android:fontFamily="@font/inter_medium"
            android:textColor="@color/text_gray" />

        <Button
            android:layout_marginEnd="16dp"
            android:id="@+id/btn_browse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/browse"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/purple"
            android:layout_gravity="right|center" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/layout_card_filename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/layout_card_chooser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_file"
            android:textSize="16sp"
            android:layout_margin="16dp"
            android:fontFamily="@font/inter_medium"
            android:textColor="@color/text_gray"
            app:drawableStartCompat="@drawable/ic_music"
            android:drawablePadding="24dp"/>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/red"
        android:hint="@string/button_submit"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/layout_card_filename" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:progressBarStyle"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>