<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".model.bottomnav.DashboardFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/line_split"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/title_types"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/types"
        android:textColor="@color/text_gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:scrollbars="none"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_types">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:scrollHorizontally="true"
            app:layout_constraintHorizontal_bias="0">

            <ImageView
                android:id="@+id/ic_happy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:contentDescription="@string/type_happy"
                android:src="@drawable/ic_emotion_happy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_happy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_happy"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/ic_happy"
                app:layout_constraintStart_toStartOf="@id/ic_happy"
                app:layout_constraintEnd_toEndOf="@id/ic_happy"
                android:fontFamily="@font/inter_semibold"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/ic_neutral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:contentDescription="@string/type_neutral"
                android:src="@drawable/ic_emotion_neutral"
                app:layout_constraintStart_toEndOf="@id/ic_happy"
                app:layout_constraintTop_toTopOf="@id/ic_happy" />

            <TextView
                android:id="@+id/tv_neutral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_neutral"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/ic_neutral"
                app:layout_constraintStart_toStartOf="@id/ic_neutral"
                app:layout_constraintEnd_toEndOf="@id/ic_neutral"
                android:fontFamily="@font/inter_semibold"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/ic_sad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:contentDescription="@string/type_sad"
                android:src="@drawable/ic_emotion_sad"
                app:layout_constraintStart_toEndOf="@id/ic_neutral"
                app:layout_constraintTop_toTopOf="@id/ic_neutral" />

            <TextView
                android:id="@+id/tv_sad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_sad"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/ic_sad"
                app:layout_constraintStart_toStartOf="@id/ic_sad"
                app:layout_constraintEnd_toEndOf="@id/ic_sad"
                android:fontFamily="@font/inter_semibold"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/ic_surprised"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:contentDescription="@string/type_surprised"
                android:src="@drawable/ic_emotion_surprised"
                app:layout_constraintStart_toEndOf="@id/ic_sad"
                app:layout_constraintTop_toTopOf="@id/ic_sad" />

            <TextView
                android:id="@+id/tv_surprised"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_surprised"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/ic_surprised"
                app:layout_constraintStart_toStartOf="@id/ic_surprised"
                app:layout_constraintEnd_toEndOf="@id/ic_surprised"
                android:fontFamily="@font/inter_semibold"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/ic_fearful"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:contentDescription="@string/type_fearful"
                android:src="@drawable/ic_emotion_fearful"
                app:layout_constraintStart_toEndOf="@id/ic_surprised"
                app:layout_constraintTop_toTopOf="@id/ic_surprised" />

            <TextView
                android:id="@+id/tv_fearful"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_fearful"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/ic_fearful"
                app:layout_constraintStart_toStartOf="@id/ic_fearful"
                app:layout_constraintEnd_toEndOf="@id/ic_fearful"
                android:fontFamily="@font/inter_semibold"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/ic_angry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:contentDescription="@string/type_angry"
                android:src="@drawable/ic_emotion_angry"
                app:layout_constraintStart_toEndOf="@id/ic_fearful"
                app:layout_constraintTop_toTopOf="@id/ic_fearful" />

            <TextView
                android:id="@+id/tv_angry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_angry"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/ic_angry"
                app:layout_constraintStart_toStartOf="@id/ic_angry"
                app:layout_constraintEnd_toEndOf="@id/ic_angry"
                android:fontFamily="@font/inter_semibold"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/ic_disgusted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:contentDescription="@string/type_disgusted"
                android:src="@drawable/ic_emotion_disgusted"
                app:layout_constraintStart_toEndOf="@id/ic_angry"
                app:layout_constraintTop_toTopOf="@id/ic_angry" />

            <TextView
                android:id="@+id/tv_disgusted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_disgusted"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/ic_disgusted"
                app:layout_constraintStart_toStartOf="@id/ic_disgusted"
                app:layout_constraintEnd_toEndOf="@id/ic_disgusted"
                android:fontFamily="@font/inter_semibold"
                android:textSize="16sp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </HorizontalScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/line_split"
        android:layout_margin="16dp"/>

</LinearLayout>